syntax = "proto3";

import "common.proto";
import "authentication.proto";

option csharp_namespace = "AcademyCloud.Identity.Services.Account";

package account;

service Account {
  rpc GetScopes(GetScopesRequest) returns (GetScopesResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc GetJoinedDomains(GetJoinedDomainsRequest)
      returns (GetJoinedDomainsResponse);
  rpc ExitDomain(ExitDomainRequest) returns (ExitDomainResponse);
  rpc GetJoinableDomains(GetJoinableDomainsRequest)
      returns (GetJoinableDomainsResponse);
  rpc JoinDomain(JoinDomainRequest) returns (JoinDomainResponse);
}

message GetScopesRequest {}

message GetScopesResponse { repeated authentication.Scope scopes = 1; }

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string token = 1;
  authentication.Scope scope = 2;
}

message GetProfileRequest {}

message GetProfileResponse { Profile profile = 1; }

message Profile {
  string id = 1;
  string username = 3;
  string email = 2;
}

message UpdateProfileRequest { string email = 1; }

message UpdateProfileResponse {}

message UpdatePasswordRequest {
  string original = 1;
  string updated = 2;
}

message UpdatePasswordResponse {
  enum Result {
    Success = 0;
    OriginalNotMatch = 1;
  }
  Result result = 1;
}

message GetJoinedDomainsRequest {}

message UserDomainAssignment {
  string domainId = 1;
  string domainName = 2;
  common.UserRole role = 3;
}

message GetJoinedDomainsResponse { repeated UserDomainAssignment domains = 1; }

message ExitDomainRequest { string domainId = 1; }

message ExitDomainResponse {}

message GetJoinableDomainsRequest {}

message GetJoinableDomainsResponse {
  message JoinableDomain {
    string id = 1;
    string name = 2;
  }
  repeated JoinableDomain domains = 1;
}

message JoinDomainRequest { string domainId = 1; }

message JoinDomainResponse {}
