syntax = "proto3";

option csharp_namespace = "AcademyCloud.Identity.Services";

package authentication;

// The greeting service definition.
service Authentication {
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationReply);
  rpc GetScopes (GetScopesRequest) returns (GetScopesReply);
}

message AuthenticationRequest {
    string username = 1;
    string password = 2;
    Scope scope = 3;
}

message AuthenticationReply {
    bool success = 1;
    string token = 2;
}

message GetScopesRequest {
    string username = 1;
    string password = 2;
}

message GetScopesReply {
    bool success = 1;
    repeated Scope scopes = 2;
}

enum UserRole {
    Admin = 0;
    Member = 1;
}

message Scope {
    string domainId = 1;
    string projectId = 2;
    string userId = 3;
    UserRole role = 4; 
}
